# yuanxiao48.github.io

./: .gitignore  START-HERE.md  astro.config.mjs  build-site.cmd  package-lock.json  package.json  start-all.cmd  start-dev.cmd  start-studio.cmd  studio-article-media-picker.css  studio-article-media-picker.js  studio-cms-utils.js  studio-cms.css  studio-editor.css  studio-editor.js  studio-layout-manager.js  studio-media-manager.js  studio-media.css  studio-page-manager.js  studio-server.mjs  studio-settings-manager.js  studio-shell.js  studio-transcode-manager.js  studio-transcode.css  studio-ui.html
native/windows-logon-session-snapshot-helper/: CMakeLists.txt  README.md  helper.c  protocol.c  protocol.h  test-protocol.c
scripts/: test-execution-containment-resolver-integration.mjs  test-execution-containment-startup-context.mjs  test-host-boot-session-witness.mjs  test-host-execution-containment-comparison.mjs  test-managed-source-probe-direct-permit.mjs  test-managed-source-probe-shutdown.mjs  test-managed-source-probe.mjs  test-studio-active-shutdown.mjs  test-studio-http-shutdown.mjs  test-studio-shutdown-controller.mjs  test-studio-shutdown-lifecycle.mjs  test-studio-shutdown-preparation.mjs  test-transcode-direct-probe-finalization.mjs  test-transcode-direct-probe-protection.mjs  test-transcode-force-kill-coordination.mjs  test-transcode-incomplete-upload-discard.mjs  test-transcode-incomplete-upload-inspector.mjs  test-transcode-output-cleanup.mjs  test-transcode-preexecution-recovery.mjs  test-transcode-probe-journal-cas.mjs  test-transcode-probe-journal-final-collection.mjs  test-transcode-probe-journal-recovery.mjs  test-transcode-probe-journal.mjs  test-transcode-probe-migration-barrier.mjs  test-transcode-probe-migration-marker.mjs  test-transcode-probe-migration-resolver.mjs  test-transcode-probe-startup-safety.mjs  test-transcode-recovery-batch.mjs  test-transcode-recovery-cleanup.mjs  test-transcode-recovery-conflicts.mjs  test-transcode-recovery-executor.mjs  test-transcode-recovery-final-snapshots.mjs  test-transcode-recovery-inspector.mjs  test-transcode-recovery-lock-installation.mjs  test-transcode-recovery-lock-manager.mjs  test-transcode-recovery-lock-planner.mjs  test-transcode-recovery-manifest-cas.mjs  test-transcode-recovery-policy.mjs  (+17 more)
(+105 files in other folders)
