cmake_minimum_required(VERSION 3.20)
project(windows_logon_session_snapshot_helper LANGUAGES C)

if(NOT WIN32)
	message(FATAL_ERROR "windows-logon-session-snapshot-helper is Windows-only")
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

add_library(windows_logon_session_protocol STATIC protocol.c)
target_include_directories(windows_logon_session_protocol PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

add_executable(windows-logon-session-snapshot-helper helper.c)
target_link_libraries(windows-logon-session-snapshot-helper PRIVATE windows_logon_session_protocol Advapi32 Secur32)

add_executable(windows-logon-session-snapshot-protocol-test test-protocol.c)
target_link_libraries(windows-logon-session-snapshot-protocol-test PRIVATE windows_logon_session_protocol)

if(MSVC)
	include(CheckCCompilerFlag)
	include(CheckLinkerFlag)
	check_c_compiler_flag("/guard:cf" WINDOWS_LOGON_SESSION_HAS_GUARD_CF_COMPILE)
	check_linker_flag(C "/guard:cf" WINDOWS_LOGON_SESSION_HAS_GUARD_CF_LINK)
	foreach(target windows_logon_session_protocol windows-logon-session-snapshot-helper windows-logon-session-snapshot-protocol-test)
		target_compile_options(${target} PRIVATE /W4 /WX /GS /sdl)
	endforeach()
	if(WINDOWS_LOGON_SESSION_HAS_GUARD_CF_COMPILE)
		foreach(target windows_logon_session_protocol windows-logon-session-snapshot-helper windows-logon-session-snapshot-protocol-test)
			target_compile_options(${target} PRIVATE /guard:cf)
		endforeach()
	else()
		message(STATUS "Control Flow Guard compile flag is unavailable for this C compiler")
	endif()
	if(WINDOWS_LOGON_SESSION_HAS_GUARD_CF_LINK)
		target_link_options(windows-logon-session-snapshot-helper PRIVATE /guard:cf)
		target_link_options(windows-logon-session-snapshot-protocol-test PRIVATE /guard:cf)
	else()
		message(STATUS "Control Flow Guard linker flag is unavailable for this linker")
	endif()
else()
	foreach(target windows_logon_session_protocol windows-logon-session-snapshot-helper windows-logon-session-snapshot-protocol-test)
		target_compile_options(${target} PRIVATE -Wall -Wextra -Werror -fstack-protector-strong)
	endforeach()
endif()
